learner dashboard overflows fix

--- a/core/templates/pages/learner-dashboard-page/home-tab.component.css
+++ b/core/templates/pages/learner-dashboard-page/home-tab.component.css
@@ -162,7 +162,7 @@
   }
   .home-tab .suggested-for-you .topic-summary-tile-scroll {
     overflow: scroll;
-    width: 305px;
+    width: 400px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1000px) {
@@ -196,7 +196,7 @@
 @media(max-width: 500px) {
   .home-tab .continue-where-you-left-off, .home-tab .suggested-for-you,
   .home-tab .empty-suggested-for-you {
-    margin-left: auto;
+    margin: auto;
     width: 335px;
   }
 
